--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3613,6 +3613,7 @@ transform: translateZ(0);
     background-color: #ffffff;
     -webkit-box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
             box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
+            height: 350px !important;
   }
   
   .single-research-box .research-image {
@@ -3624,7 +3625,7 @@ transform: translateZ(0);
     transition: 0.5s;
     border-radius:10px 10px 0px 0px;
     width: 100% !important;
-    /* height: 300px !important; */
+    height: 230px !important;
   }
   
   .single-research-box .research-content {
@@ -5984,6 +5985,7 @@ transform: translateZ(0);
     font-size: 14px;
     display: flex;
     flex-wrap: wrap;
+    gap: 5px;
     /* padding-left: 22px; */
   }
   
@@ -6640,6 +6642,7 @@ display: block;
   font-size: 20px !important;
     margin-bottom: 10px !important;
     color: #eb268f !important;
+    font-weight: 700 !important;
 }
 
 .about-features-list li
@@ -6651,6 +6654,7 @@ display: block;
     padding-top: 10px;
     text-align: justify;
     list-style: none;
+    line-height: 1.5
 }
 
 .products-details-tab-content ul.about-features-list li i {
@@ -6729,7 +6733,7 @@ display: block;
 .phone_icon
 {
   color: #eb268f;
-  margin: 6px;
+  /* margin: 6px; */
   font-size: 17px;
 }
 
@@ -6780,6 +6784,37 @@ display: block;
 
 .sterling_icon1
 {
-  margin-right: 15px;
+  /* margin-right: 15px; */
   color: #eb268f;
+}
+
+.hospital-part .hospital-logo img
+{
+  max-height: 150px;
+}
+
+.single-footer-widget .footer-contact-info h5
+{
+  font-size: 16px;
+    font-weight: 600;
+    color: #000;
+}
+
+.single-footer-widget .footer-contact-info p span {
+  color: #eb268f;
+  font-weight: bold;
+  display: block;
+}
+
+.products-details-tab-content.contact 
+{
+  padding: 26px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    background: #ffe9f5;
+}
+
+.hospital-detail .single-footer-widget .footer-contact-info li a {
+  color: #555555;
+  font-size: 16px;
 }
