--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3613,7 +3613,7 @@ transform: translateZ(0);
     background-color: #ffffff;
     -webkit-box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
             box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
-            height: 350px !important;
+            /* height: 180px !important; */
   }
   
   .single-research-box .research-image {
@@ -3623,9 +3623,11 @@ transform: translateZ(0);
   .single-research-box .research-image a img {
     -webkit-transition: 0.5s;
     transition: 0.5s;
-    border-radius:10px 10px 0px 0px;
+    border-radius:5px 10px 10px 5px;
     width: 100% !important;
-    height: 230px !important;
+    min-height: 179px !important;
+    max-height: 200px !important;
+    /* max-height: 179px !important; */
   }
   
   .single-research-box .research-content {
