--- a/src/css/style.css
+++ b/src/css/style.css
@@ -140,8 +140,8 @@ a:hover {
   color: #eb268f;
   border-color: #eb268f;
   background-color: transparent;
-  -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.02);
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.02);
+  /* -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.02); */
 }
 
 .btn-secondary {
@@ -3755,7 +3755,7 @@ blockquote::before,
 
 .single-research-box .research-content span {
   display: inline-block;
-  background-color: #ffe7de;
+  /* background-color: #ffe7de; */
   color: #eb268f;
   padding: 5px 15px;
   border-radius: 30px;
@@ -6969,4 +6969,18 @@ blockquote::before,
   display: block;
   outline: 0;
   transition: 0.5s;
+}
+
+.slick-initialized .slick-slide {
+  padding: 20px;
+}
+
+.slick-slide img {
+  max-height: 200px;
+  min-height: 200px;
+}
+
+.card-body-camping {
+  min-height: 250px;
+  max-height: 250px;
 }
