--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4109,7 +4109,7 @@ blockquote::before,
   Sidebar Area CSS
   =================================================*/
 .widget-area {
-  padding-left: 15px;
+  /* padding-left: 15px; */
 }
 
 .widget-area .widget {
@@ -4145,8 +4145,8 @@ blockquote::before,
 }
 
 .widget-area .widget_search {
-  -webkit-box-shadow: 0px 0px 29px 0px rgba(102, 102, 102, 0.1);
-  box-shadow: 0px 0px 29px 0px rgba(102, 102, 102, 0.1);
+  /* -webkit-box-shadow: 0px 0px 29px 0px rgba(102, 102, 102, 0.1);
+  box-shadow: 0px 0px 29px 0px rgba(102, 102, 102, 0.1); */
   background-color: #ffffff;
   padding: 15px;
 }
@@ -4196,7 +4196,7 @@ blockquote::before,
 
 .widget-area .widget_search form button:hover {
   color: #ffffff;
-  background-color: #22b663;
+  /* background-color: #22b663; */
 }
 
 .widget-area .widget_labto_posts_thumb {
@@ -6988,4 +6988,18 @@ blockquote::before,
 .card-image-camping {
   min-height: 200px;
   max-height: 200px;
+}
+
+.widget-area-searchbox {
+  padding-left: 0px !important;
+}
+
+.card-body-camping {
+  min-height: 240px !important;
+  max-height: 240px !important;
+}
+
+.register-camping {
+  text-align: end;
+  padding: 15px;
 }
