--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3744,7 +3744,7 @@ blockquote::before,
   transition: 0.5s;
   border-radius: 5px 10px 10px 5px;
   width: 100% !important;
-  min-height: 267px !important;
+  min-height: 289px !important;
   max-height: 294px !important;
   /* max-height: 179px !important; */
 }
@@ -7024,4 +7024,34 @@ blockquote::before,
 .caming-sec {
   text-align: center;
   margin-bottom: 20px;
+}
+
+.show-more-button {
+  display: block;
+  margin: 20px auto;
+  /* Centers the button */
+  padding: 10px 20px;
+  /* Padding for the button */
+  color: #fff;
+  /* Text color */
+  background-color: #ec2590;
+  /* Background color */
+  border: none;
+  /* Removes border */
+  border-radius: 5px;
+  /* Rounded corners */
+  cursor: pointer;
+  /* Pointer cursor on hover */
+  font-size: 16px;
+  /* Font size */
+  transition: background-color 0.3s ease;
+  /* Smooth background color transition */
+}
+
+.show-more-button:hover {
+  background-color: #fff;
+  color: #ec2590;
+  border: 1px solid #ec2590;
+  border-radius: 5px;
+  /* Darker background color on hover */
 }
