changes in all pages

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -227,7 +227,7 @@ a:hover {
   top: 0;
   height: 100%;
   width: 50px;
-  background: #eb268f;
+  /* background: #eb268f; */
   z-index: -1;
   opacity: .20;
 }
@@ -1176,7 +1176,7 @@ a:hover {
   top: 0;
   height: 100%;
   width: 50px;
-  background: #eb268f;
+  /* background: #eb268f; */
   z-index: -1;
   opacity: .20;
 }
@@ -3731,8 +3731,9 @@ blockquote::before,
   margin-bottom: 30px;
   background-color: #ffffff;
   -webkit-box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
-  box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
-  /* height: 180px !important; */
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1),
+    0 10px 10px rgba(0, 0, 0, 0.02)
+    /* height: 180px !important; */
 }
 
 .single-research-box .research-image {
@@ -6995,6 +6996,11 @@ blockquote::before,
 }
 
 .card-body-camping {
+  min-height: 330px !important;
+  max-height: 240px !important;
+}
+
+.card-home-camping {
   min-height: 240px !important;
   max-height: 240px !important;
 }
@@ -7054,4 +7060,23 @@ blockquote::before,
   border: 1px solid #ec2590;
   border-radius: 5px;
   /* Darker background color on hover */
+}
+
+.camping-card {
+  width: 18rem;
+  margin: 0 auto;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1),
+    0 10px 10px rgba(0, 0, 0, 0.02);
+  border-radius: 10px;
+  /* Adds rounded corners */
+  overflow: hidden;
+  /* Ensures content doesn't overflow the border radius */
+  transition: transform 0.3s, box-shadow 0.3s;
+  /* Adds smooth transition effects */
+}
+
+.camping-card:hover {
+  transform: translateY(-10px);
+  /* Moves the card slightly up */
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2), 0 15px 15px rgba(0, 0, 0, 0.1);
 }
