--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6047,6 +6047,7 @@ blockquote::before,
   =================================================*/
 .footer-area {
   padding-top: 50px;
+  box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.06);
 }
 
 .single-footer-widget {
