--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1228,7 +1228,7 @@ a:hover {
 
 .about-content .btn-box {
   margin-top: 25px;
-  text-align: center;
+  text-align: end;
 }
 
 .about-content .video-btn {
@@ -1409,6 +1409,7 @@ a:hover {
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 15px;
+  text-align: center;
 }
 
 .single-services-box .icon {
@@ -2706,8 +2707,12 @@ a:hover {
   font-weight: 700;
   color: #323232;
   position: absolute;
-  left: 0;
+  left: 60px;
   top: 0;
+}
+
+.map-icon {
+  height: 50px !important;
 }
 
 .team-details-desc .team-info li ul {
@@ -7303,6 +7308,41 @@ blockquote::before,
 }
 
 .test-images {
-  width: 500px;
+  width: 300px;
   margin: 0 auto;
+}
+
+.show-more-test {
+  color: #eb268f;
+  text-decoration: none;
+}
+
+
+.modal-header {
+  padding: 1rem;
+}
+
+.modal-body {
+  padding: 2rem;
+}
+
+.form-group {
+  margin-bottom: 1.5rem;
+}
+
+.form-label {
+  margin-bottom: 0.5rem;
+}
+
+.form-control {
+  padding: 0.75rem;
+  margin-bottom: 0.5rem;
+}
+
+.form-textarea {
+  padding: 0.75rem;
+}
+
+.submit-button {
+  margin-top: 1rem;
 }
